2015-02-12  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ThisIsCoffee.sh:
	* testsuite/ThisIsCoffee1961_captions.xml:
	Fix again the ThisIsCoffee, and provide a pipeline to play it.

2015-02-12  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ThisIsCoffee1961_captions.xml:
	Fix the ThisIsCoffee test. There is nobody in the world that knows
	how to write a proper TTML file but me, seriously.

2015-02-12  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_boolean), (gst_ttml_attribute_new_int):
	* src/gstttmlattribute.h:
	* src/gstttmlbase.c: (gst_ttmlbase_add_region):
	* src/gstttmlenums.h:
	* src/gstttmlevent.c: (gst_ttml_event_new_region_end):
	* src/gstttmlevent.h:
	* src/gstttmlrender.c: (gst_ttmlrender_new_region),
	(gst_ttmlrender_setup_region_attrs),
	(gst_ttmlrender_build_layouts),
	(gst_ttmlrender_build_background_layout),
	(gst_ttmlrender_gen_buffer):
	* src/gstttmlutils.c:
	* src/gstttmlutils.h:
	Add support for the ShowBackground attribute.
	Use lexical order when regions do not set their zIndex.

2015-02-12  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c: (gst_ttml_style_set_attr):
	Return previous value when removing an attribute from the stack.
	This is not used yet, but makes more sense in this way.

2015-02-11  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_free),
	(gst_ttml_attribute_new_style_removal):
	* src/gstttmlattribute.h:
	* src/gstttmlbase.c: (gst_ttmlbase_parse_event),
	(gst_ttmlbase_add_region), (gst_ttmlbase_sax2_element_start_ns),
	(gst_ttmlbase_sax2_element_end_ns):
	* src/gstttmlenums.h:
	* src/gstttmlevent.c: (gst_ttml_event_free),
	(gst_ttml_event_compare), (gst_ttml_event_new_region_begin),
	(gst_ttml_event_new_region_end),
	(gst_ttml_event_new_region_update), (gst_ttml_event_list_insert),
	(gst_ttml_event_type_name):
	* src/gstttmlevent.h:
	* src/gstttmlrender.c: (gst_ttmlrender_build_layouts):